--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,22 @@
                         </div>
                     </div>
 
+                    <!-- Cigarette Equivalent -->
+                    <div class="mb-6">
+                        <h3 class="text-sm font-medium text-gray-600 mb-2">Health Impact Equivalent</h3>
+                        <div id="cigaretteCard" class="rounded-lg p-6 text-center shadow-md bg-gradient-to-br from-amber-50 to-orange-50 border-2 border-amber-200">
+                            <div class="flex items-center justify-center gap-3 mb-3">
+                                <svg class="w-8 h-8 text-amber-600" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"/>
+                                </svg>
+                                <p class="text-sm text-gray-600 font-medium">Breathing this air for 24 hours is equivalent to smoking:</p>
+                            </div>
+                            <div class="text-5xl font-bold text-amber-700 mb-2" id="cigaretteCount">0</div>
+                            <div class="text-lg font-semibold text-amber-800" id="cigaretteLabel">cigarettes</div>
+                            <p class="text-xs text-gray-500 mt-3 italic">Based on PM2.5 particle concentration (22μg/m³ = 1 cigarette per 24 hours)</p>
+                        </div>
+                    </div>
+
                     <!-- Additional Info -->
                     <div class="bg-gray-50 rounded-lg p-4">
                         <h3 class="text-sm font-medium text-gray-600 mb-3">Pollutant Components (μg/m³)</h3>
